# quant-trader

./: .gitattributes  .pre-commit-config.yaml  main.py  pyproject.toml
src/qt/: engine.py
src/qt/data/: __init__.py  loader.py
src/qt/features/: indicators.py
src/qt/utils/: toy.py
tests/: test_indicators.py  test_loader.py  test_smoke.py
